--- a/todo.txt
+++ b/todo.txt
@@ -17,4 +17,5 @@ x 2021-04-23 2021-04-23 Show packages in left panel +projector @code @complex
 2021-04-23 Support for C and GLSL +projector @code @complex
 2021-04-23 Switching to fullscreen +projector @code @complex
 2021-04-23 Video arrangement: me completely in the frame +projector @simple @video
-2021-04-23 Current file pop-up +projector @code @complex
+x 2021-04-23 2021-04-23 Current file pop-up +projector @code @complex
+2021-04-23 File pop-up animations: fade-in/fade-out +projector @code @simple
