--- a/todo.txt
+++ b/todo.txt
@@ -12,7 +12,7 @@ x 2021-04-23 2021-04-23 Minimap cursor window +projector @simple @code
 2021-04-23 Move the minimap to accomodate any amounts of code +projector @code @complex
 (A) 2021-04-23 New thumbnail, new backgrounds +projector @simple @video
 2021-04-23 Off-screen MSAA for Deferred Technique +projector @code @complex
-(A) 2021-04-23 Repository, assets, projects +projector @assets @complex
+(A) 2021-04-23 Remove assets from project +projector @assets @complex
 x 2021-04-23 2021-04-23 Show packages in left panel +projector @code @complex
 2021-04-23 Support for C and GLSL +projector @code @complex
 2021-04-23 Switching to fullscreen +projector @code @complex
@@ -20,3 +20,5 @@ x 2021-04-23 2021-04-23 Show packages in left panel +projector @code @complex
 x 2021-04-23 2021-04-23 Current file pop-up +projector @code @complex
 x 2021-04-23 (A) 2021-04-23 File pop-up animations: fade-in/fade-out +projector @code @simple
 2021-04-23 File pop-up shadow +projector @code @simple @idea
+2021-04-24 Intro scene for Projector +projecto @complex @code
+(A) 2021-04-25 Move projector to subproject from sfc +projector @code @simple
