--- a/todo.txt
+++ b/todo.txt
@@ -1,8 +1,8 @@
 2021-04-23 Add the ability to show existing code without animation +projector @code @complex
 (A) 2021-04-23 Ambient music/theme/sounds in video +projector @complex @video
 (A) 2021-04-23 Create avatar for a channel, rename channel to Greg's Journal +projector @simple @video
-(A) 2021-04-23 Fix texture for the bedroom scene +projector @assets @simple
-(A) 2021-04-23 Fix texture Z-fighting or remove the globe +projector @simple @assets
+x 2021-04-25 (A) 2021-04-23 Fix texture for the bedroom scene +projector @assets @simple
+x 2021-04-25 (A) 2021-04-23 Fix texture Z-fighting or remove the globe +projector @simple @assets
 2021-04-23 Highlighting enums +projector @simple @code
 2021-04-23 Highlighting for named arguments and labels (kotlin_blue) +projector @simple @code
 2021-04-23 Highlight sections of code +projector @code @complex
