--- a/todo.txt
+++ b/todo.txt
@@ -1,5 +1,5 @@
 2021-04-23 Add the ability to show existing code without animation +projector @code @complex
-(A) 2021-04-23 Ambient music/theme/sounds in video +projector @complex @video
+(A) 2021-04-23 Ambient jazzy music in video from youtube +projector @complex @video
 (A) 2021-04-23 Create avatar for a channel, rename channel to Greg's Journal +projector @simple @video
 x 2021-04-25 (A) 2021-04-23 Fix texture for the bedroom scene +projector @assets @simple
 x 2021-04-25 (A) 2021-04-23 Fix texture Z-fighting or remove the globe +projector @simple @assets
@@ -35,5 +35,7 @@ x 2021-04-29 2021-04-29 Find a way to import HuffYUV to Blender +projector @code
 2021-04-29 Find a way to directly incode H264 lossless in code +projector @code @complex
 2021-04-29 True Type fonts +projector @code @complex
 2021-04-29 THE MODEL - Greg's Journal 1 +projector @video @simple
-2021-04-30 Show whitespace only before typing, not before scrolling +project @code @simple
+2021-04-30 Show whitespace only before typing, not before scrolling +projector @code @simple
 2021-04-30 Stop capturing after N seconds +projector @code @simple
+(A) 2021-04-30 Typing sounds for KB from NoCopyrightSounds +projector @simple @video
+2021-04-30 Generate typing sounds with video +projector @code @complex
