--- a/todo.txt
+++ b/todo.txt
@@ -1,17 +1,17 @@
-2021-04-23 Add the ability to show existing code without animation +projector @code @complex
+(A) 2021-04-23 Add the ability to show existing code without animation (frame = 0?) +projector @code @simple
 x 2021-05-02 (A) 2021-04-23 Ambient jazzy music in video from youtube +projector @complex @video
-(A) 2021-04-23 Create avatar for a channel, rename channel to Greg's Journal +projector @simple @video
+x 2021-05-02 (A) 2021-04-23 Create avatar for a channel, rename channel to Greg's Journal +projector @simple @video
 x 2021-04-25 (A) 2021-04-23 Fix texture for the bedroom scene +projector @assets @simple
 x 2021-04-25 (A) 2021-04-23 Fix texture Z-fighting or remove the globe +projector @simple @assets
-2021-04-23 Highlighting enums +projector @simple @code
-2021-04-23 Highlighting for named arguments and labels (kotlin_blue) +projector @simple @code
+(A) 2021-04-23 Highlighting enums +projector @simple @code
+(A) 2021-04-23 Highlighting for named arguments and labels (kotlin_blue) +projector @simple @code
 2021-04-23 Highlight sections of code +projector @code @complex
-2021-04-23 Highlighting for method calls in function body +projector @simple @code
-2021-04-23 Create automatic video description, include link to source code +projector @simple @code
+(A) 2021-04-23 Highlighting for method calls in function body +projector @simple @code
+(A) 2021-04-23 Create automatic video description, include link to source code +projector @simple @code
 x 2021-04-23 2021-04-23 Minimap cursor window +projector @simple @code
-2021-04-23 Move the minimap to accomodate any amounts of code +projector @code @complex
-(A) 2021-04-23 New thumbnail, new backgrounds +projector @simple @video
-2021-04-23 Off-screen MSAA for Deferred Technique +projector @code @complex
+(A) 2021-04-23 Move the minimap to accomodate any amounts of code +projector @code @complex
+x 2021-05-02 (A) 2021-04-23 New thumbnail, new backgrounds +projector @simple @video
+(A) 2021-04-23 Off-screen MSAA for Deferred Technique +projector @code @complex
 x 2021-04-25 (A) 2021-04-23 Remove assets from project +projector @assets @complex
 x 2021-04-23 2021-04-23 Show packages in left panel +projector @code @complex
 2021-04-23 Support for C and GLSL +projector @code @complex
@@ -20,23 +20,25 @@ x 2021-04-29 (A) 2021-04-23 Video arrangement: me completely in the frame +proje
 x 2021-04-23 2021-04-23 Current file pop-up +projector @code @complex
 x 2021-04-23 (A) 2021-04-23 File pop-up animations: fade-in/fade-out +projector @code @simple
 2021-04-23 File pop-up shadow +projector @code @simple @idea
-2021-04-24 Intro scene for Projector +projector @complex @code
+(A) 2021-04-24 Intro scene for Projector +projector @complex @code
 x 2021-04-25 (A) 2021-04-25 Move projector to subproject from sfc +projector @code @simple
 2021-04-25 Fix texture UV missing on doors +projector @assets @complex
-2021-04-26 Find a way to show charts, pictures, diagrams, etc (cross-fade pics? water based markers comics?) +projector @video @code @complex
-2021-04-28 Logo scene +projector @code @complex @assets
-2021-04-29 Better tripod +projector @video @simple
+(A) 2021-04-26 Find a way to show charts, pictures, diagrams, etc (cross-fade pics? water based markers comics?) +projector @video @code @complex
+(A) 2021-04-28 Logo scene +projector @code @complex @assets
+(A) 2021-04-29 Better tripod +projector @video @simple
 2021-04-29 Better lighting +projector @video @complex
 2021-04-29 Better camera +projector @video @complex
-2021-04-29 Better teleprompter app +projector @video @simple
+(A) 2021-04-29 Better teleprompter app +projector @video @simple
 2021-04-29 Screen capture for any scene +projector @simple @code
 2021-04-29 Learn about H264 codec +projector @code @video @complex
 x 2021-04-29 2021-04-29 Find a way to import HuffYUV to Blender +projector @code @video @complex
-2021-04-29 Find a way to directly incode H264 lossless in code +projector @code @complex
+x 2021-05-03 2021-04-29 Find a way to directly incode H264 lossless in code +projector @code @complex
 2021-04-29 True Type fonts +projector @code @complex
 x 2021-05-02 (A) 2021-04-29 THE MODEL - Greg's Journal 1 +projector @video @simple
-2021-04-30 Show whitespace only before typing, not before scrolling +projector @code @simple
-2021-04-30 Stop capturing after N seconds +projector @code @simple
+(A) 2021-04-30 Show whitespace only before typing, not before scrolling +projector @code @simple
+(A) 2021-04-30 Stop capturing after N seconds +projector @code @simple
 2021-04-30 Typing sounds for KB from NoCopyrightSounds +projector @simple @video
 2021-04-30 Generate typing sounds with video +projector @code @complex
-2021-05-02 Ask questions from audience +projector @video @simple
+(A) 2021-05-02 Ask questions from audience +projector @video @simple
+(A) 2021-05-02 Create avatar for a channel +projector @video @complex
+(A) 2021-05-03 Create a header strip for the channel page +projector @video @simple
