--- a/todo.txt
+++ b/todo.txt
@@ -25,7 +25,7 @@ x 2021-04-25 (A) 2021-04-25 Move projector to subproject from sfc +projector @co
 2021-04-25 Fix texture UV missing on doors +projector @assets @complex
 x 2021-05-07 (A) 2021-04-26 Find a way to show charts, pictures, diagrams, etc (cross-fade pics? water based markers comics?) +projector @video @code @complex
 x 2021-05-04 2021-04-28 Logo scene +projector @code @complex @assets
-(A) 2021-04-29 Better tripod +projector @video @simple
+(B) 2021-04-29 Better tripod +projector @video @simple
 2021-04-29 Better lighting +projector @video @complex
 2021-04-29 Better camera +projector @video @complex
 (A) 2021-04-29 Better teleprompter app +projector @video @simple
@@ -40,9 +40,10 @@ x 2021-05-02 (A) 2021-04-29 THE MODEL - Greg's Journal 1 +projector @video @simp
 2021-04-30 Typing sounds for KB from NoCopyrightSounds +projector @simple @video
 (B) 2021-04-30 Generate typing sounds with video +projector @code @complex
 (A) 2021-05-02 Ask questions from audience +projector @video @simple
-(A) 2021-05-02 Create avatar for a channel +projector @video @complex
+(B) 2021-05-02 Create avatar for a channel +projector @video @complex
 (A) 2021-05-03 Create a header strip for the channel page +projector @video @simple
 2021-05-03 Forum on gzozulin.com +projector @complex @web
 (A) 2021-05-04 Blender file template +projector @video @simple
 x 2021-05-07 (A) 2021-05-05 Remove dynamic resizing from the codebase +projector @code @complex
 (B) 2021-05-08 MSAA for RttTechnique (code rendering) +projector @code @complex
+(A) 2021-05-09 api2: Transforms, Textures, Uniforms +projector @code @simple
