--- a/todo.txt
+++ b/todo.txt
@@ -46,4 +46,5 @@ x 2021-05-02 (A) 2021-04-29 THE MODEL - Greg's Journal 1 +projector @video @simp
 (A) 2021-05-04 Blender file template +projector @video @simple
 x 2021-05-07 (A) 2021-05-05 Remove dynamic resizing from the codebase +projector @code @complex
 (B) 2021-05-08 MSAA for RttTechnique (code rendering) +projector @code @complex
-(A) 2021-05-09 api2: Transforms, Textures, Uniforms +projector @code @simple
+x 2021-05-12 (A) 2021-05-09 api2: Transforms, Textures, Uniforms +projector @code @simple
+2021-05-12 Inject substitutions before and after main() for shaders +projector @code @complex
