--- a/todo.txt
+++ b/todo.txt
@@ -1,48 +1,48 @@
 (B) 2021-04-23 Add the ability to show existing code without animation (frame = 0?) +code @simple
-x 2021-05-02 (A) 2021-04-23 Ambient jazzy music in video from youtube @complex +video
-x 2021-05-02 (A) 2021-04-23 Create avatar for a channel, rename channel to Greg's Journal @simple +video
+x 2021-05-02 (A) 2021-04-23 Ambient jazzy music in video from youtube +video @complex
+x 2021-05-02 (A) 2021-04-23 Create avatar for a channel, rename channel to Greg's Journal +video @simple
 x 2021-04-25 (A) 2021-04-23 Fix texture for the bedroom scene +assets @simple
-x 2021-04-25 (A) 2021-04-23 Fix texture Z-fighting or remove the globe @simple +assets
+x 2021-04-25 (A) 2021-04-23 Fix texture Z-fighting or remove the globe +assets @simple
 (A) 2021-04-23 Highlighting enums +code @simple
 (A) 2021-04-23 Highlighting for named arguments and labels (kotlin_blue) +code @simple
 2021-04-23 Highlight sections of code +code @complex
-(A) 2021-04-23 Highlighting for method calls in function body @simple +code
-2021-04-23 Create automatic video description, include link to source code @simple +code
-x 2021-04-23 2021-04-23 Minimap cursor window @simple +code
+(A) 2021-04-23 Highlighting for method calls in function body +code @simple
+2021-04-23 Create automatic video description, include link to source code +code @simple
+x 2021-04-23 2021-04-23 Minimap cursor window +code @simple
 (B) 2021-04-23 Move the minimap to accomodate any amounts of code +code @complex
-x 2021-05-02 (A) 2021-04-23 New thumbnail, new backgrounds @simple +video
+x 2021-05-02 (A) 2021-04-23 New thumbnail, new backgrounds +video @simple
 x 2021-05-07 (A) 2021-04-23 Off-screen MSAA for Deferred Technique +code @complex
 x 2021-04-25 (A) 2021-04-23 Remove assets from project +assets @complex
 x 2021-04-23 2021-04-23 Show packages in left panel +code @complex`
 2021-04-23 Support for C and GLSL +code @complex
 2021-04-23 Switching to fullscreen +code @complex
-x 2021-04-29 (A) 2021-04-23 Video arrangement: me completely in the frame @simple +video
+x 2021-04-29 (A) 2021-04-23 Video arrangement: me completely in the frame +video @simple
 x 2021-04-23 2021-04-23 Current file pop-up +code @complex
 x 2021-04-23 (A) 2021-04-23 File pop-up animations: fade-in/fade-out +code @simple
-2021-04-23 File pop-up shadow +code @simple +idea
-(B) 2021-04-24 Intro scene for Projector @complex +code
+2021-04-23 File pop-up shadow +code +idea @simple
+(B) 2021-04-24 Intro scene for Projector +code @complex
 x 2021-04-25 (A) 2021-04-25 Move projector to subproject from sfc +code @simple
 2021-04-25 Fix texture UV missing on doors +assets @complex
 x 2021-05-07 (A) 2021-04-26 Find a way to show charts, pictures, diagrams, etc (cross-fade pics? water based markers comics?) +video +code @complex
-x 2021-05-04 2021-04-28 Logo scene +code @complex +assets
+x 2021-05-04 2021-04-28 Logo scene +code +assets @complex
 (B) 2021-04-29 Better tripod +video @simple
 2021-04-29 Better lighting +video @complex
 2021-04-29 Better camera +video @complex
 (A) 2021-04-29 Better teleprompter app +video @simple
-2021-04-29 Screen capture for any scene @simple +code
+2021-04-29 Screen capture for any scene +code @simple
 2021-04-29 Learn about H264 codec +code +video @complex
 x 2021-04-29 2021-04-29 Find a way to import HuffYUV to Blender +code +video @complex
 x 2021-05-03 2021-04-29 Find a way to directly incode H264 lossless in code +code @complex
-(B) 2021-04-29 True Type fonts +code @complex
+(B) 2021-04-29 gdx-freetype fonts +code @complex
 x 2021-05-02 (A) 2021-04-29 THE MODEL - Greg's Journal 1 +video @simple
 (A) 2021-04-30 Show whitespace only before typing, not before scrolling +code @simple
 (A) 2021-04-30 Stop capturing after N seconds +code @simple
-2021-04-30 Typing sounds for KB from NoCopyrightSounds @simple +video
+2021-04-30 Typing sounds for KB from NoCopyrightSounds +video @simple
 (B) 2021-04-30 Generate typing sounds with video +code @complex
 (A) 2021-05-02 Ask questions from audience +video @simple
 (B) 2021-05-02 Create avatar for a channel +video @complex
 (A) 2021-05-03 Create a header strip for the channel page +video @simple
-2021-05-03 Forum on gzozulin.com @complex +web
+2021-05-03 Forum on gzozulin.com +web @complex
 (A) 2021-05-04 Blender file template +video @simple
 x 2021-05-07 (A) 2021-05-05 Remove dynamic resizing from the codebase +code @complex
 (B) 2021-05-08 MSAA for RttTechnique (code rendering) +code @complex
@@ -50,5 +50,5 @@ x 2021-05-12 (A) 2021-05-09 api2: Transforms, Textures, Uniforms +code @simple
 x 2021-05-14 2021-05-12 Inject substitutions before and after main() for shaders +code @complex
 2021-05-13 Learn about licenses for creative use +video @complex
 2021-05-14 Remove GlBackend +code @complex
-(A) 2021-05-14 Fix fonts for ProjectorView +code @simple
+x 2021-05-15 (A) 2021-05-14 Fix fonts for ProjectorView +code @simple
 2021-05-14 Light shines even from the opposite side of the surface +code @complex
