--- a/todo.txt
+++ b/todo.txt
@@ -54,3 +54,5 @@ x 2021-05-15 (A) 2021-05-14 Fix fonts for ProjectorView +code @simple
 2021-05-14 Light shines even from the opposite side of the surface +code @complex
 x 2021-05-15 (A) 2021-05-15 Show filename when start typing +code @complex
 (A) 2021-05-15 Fix minimap cursor +code @simple
+(A) 2021-05-17 Use rule of thirds +video @simple
+2021-05-17 Direct lights for PBR +code @complex
