--- a/todo.txt
+++ b/todo.txt
@@ -48,7 +48,7 @@ x 2021-05-07 (A) 2021-05-05 Remove dynamic resizing from the codebase +code @com
 (B) 2021-05-08 MSAA for RttTechnique (code rendering) +code @complex
 x 2021-05-12 (A) 2021-05-09 api2: Transforms, Textures, Uniforms +code @simple
 x 2021-05-14 2021-05-12 Inject substitutions before and after main() for shaders +code @complex
-2021-05-13 Learn about licenses for creative use +video @complex
+(B) 2021-05-13 Learn about licenses for creative use +video @complex
 2021-05-14 Remove GlBackend +code @complex
 x 2021-05-15 (A) 2021-05-14 Fix fonts for ProjectorView +code @simple
 2021-05-14 Light shines even from the opposite side of the surface +code @complex
