--- a/todo.txt
+++ b/todo.txt
@@ -20,7 +20,7 @@ x 2021-04-29 (A) 2021-04-23 Video arrangement: me completely in the frame +video
 x 2021-04-23 2021-04-23 Current file pop-up +code @complex
 x 2021-04-23 (A) 2021-04-23 File pop-up animations: fade-in/fade-out +code @simple
 x 2021-05-19 2021-04-23 File pop-up shadow +code +idea @simple
-(B) 2021-04-24 Intro scene for Projector +code @complex
+x 2021-05-22 (B) 2021-04-24 Intro scene for Projector +code @complex
 x 2021-04-25 (A) 2021-04-25 Move projector to subproject from sfc +code @simple
 x 2021-05-19 2021-04-25 Fix texture UV missing on doors +assets @complex
 x 2021-05-07 (A) 2021-04-26 Find a way to show charts, pictures, diagrams, etc (cross-fade pics? water based markers comics?) +video +code @complex
@@ -29,7 +29,7 @@ x 2021-05-04 2021-04-28 Logo scene +code +assets @complex
 2021-04-29 Better lighting +video @complex
 2021-04-29 Better camera +video @complex
 (A) 2021-04-29 Better teleprompter app +video @simple
-2021-04-29 Screen capture for any scene +code @simple
+x 2021-05-22 2021-04-29 Screen capture for any scene +code @simple
 2021-04-29 Learn about H264 codec +code +video @complex
 x 2021-04-29 2021-04-29 Find a way to import HuffYUV to Blender +code +video @complex
 x 2021-05-03 2021-04-29 Find a way to directly incode H264 lossless in code +code @complex
@@ -59,3 +59,4 @@ x 2021-05-15 (A) 2021-05-15 Show filename when start typing +code @complex
 2021-05-17 Environment lighting for PBR +code @complex
 2021-05-18 Custom URL for channel (> 100 subs) +video @complex
 2021-05-20 Camera rotations with arrows, precision with shift for WASD input +code @simple
+(B) 2021-05-22 Multiple shots per one capture of code +code @complex
