--- a/todo.txt
+++ b/todo.txt
@@ -65,3 +65,4 @@ x 2021-05-22 (A) 2021-05-15 Fix minimap cursor +code @simple
 (A) 2021-05-26 Establishing shot +video @simple
 (B) 2021-05-31 Basic support for C and interop +code @complex
 2021-06-01 Channel watermarks, especially for captures +video @simple
+2021-06-02 Channel trailer +video @complex
