--- a/todo.txt
+++ b/todo.txt
@@ -54,7 +54,7 @@ x 2021-05-15 (A) 2021-05-14 Fix fonts for ProjectorView +code @simple
 2021-05-14 Light shines even from the opposite side of the surface +code @complex
 x 2021-05-15 (A) 2021-05-15 Show filename when start typing +code @complex
 x 2021-05-22 (A) 2021-05-15 Fix minimap cursor +code @simple
-(A) 2021-05-17 Use rule of thirds +video @simple
+x 2021-06-03 (A) 2021-05-17 Use rule of thirds +video @simple
 2021-05-17 Direct lights for PBR +code @complex
 2021-05-17 Environment lighting for PBR +code @complex
 2021-05-18 Custom URL for channel (> 100 subs) +video @complex
@@ -66,3 +66,4 @@ x 2021-05-22 (A) 2021-05-15 Fix minimap cursor +code @simple
 (B) 2021-05-31 Basic support for C and interop +code @complex
 2021-06-01 Channel watermarks, especially for captures +video @simple
 2021-06-02 Channel trailer +video @complex
+2021-06-03 Cron job to copy the current video once a day +video @simple
