--- a/todo.txt
+++ b/todo.txt
@@ -73,3 +73,4 @@ x 2021-06-12 (A) 2021-06-08 Intrigue, humor, establishing shot +video @complex
 2021-04-23 Add the ability to show existing code without animation (frame = 0?) +code @simple
 2021-06-12 Highlight string injected code +code @complex
 (B) 2021-06-12 Blurred rendered background for pictures (or even integrate it with Projector) +code @complex
+2021-06-17 Export structs from C +code @complex
